# destiny2-api-rs

./: Cargo.toml  gen-client.sh
codegen/: README.md
codegen/docs/: CommunityCommunityLiveStatus.md  CommunityContentApi.md  ComponentsComponentResponse.md  ContentContentItemPublicContract.md  Destiny2Api.md  DestinyChallengesDestinyChallengeStatus.md  DestinyComponentsItemsDestinyItemPlugComponent.md  DestinyComponentsKiosksDestinyKioskItem.md  DestinyConfigDestinyManifest.md  DestinyDefinitionsCommonDestinyDisplayPropertiesDefinition.md  DestinyDefinitionsDestinyActivityChallengeDefinition.md  DestinyDefinitionsDestinyActivityDefinition.md  DestinyDefinitionsDestinyActivityModeDefinition.md  DestinyDefinitionsDestinyActivityPlaylistItemDefinition.md  DestinyDefinitionsDestinyBubbleDefinition.md  DestinyDefinitionsDestinyClassDefinition.md  DestinyDefinitionsDestinyDamageTypeDefinition.md  DestinyDefinitionsDestinyDestinationDefinition.md  DestinyDefinitionsDestinyDisplayCategoryDefinition.md  DestinyDefinitionsDestinyEntitySearchResult.md  DestinyDefinitionsDestinyEntitySearchResultItem.md  DestinyDefinitionsDestinyEquipmentSlotDefinition.md  DestinyDefinitionsDestinyEquippingBlockDefinition.md  DestinyDefinitionsDestinyFactionDefinition.md  DestinyDefinitionsDestinyGenderDefinition.md  DestinyDefinitionsDestinyInventoryBucketDefinition.md  DestinyDefinitionsDestinyInventoryItemDefinition.md  DestinyDefinitionsDestinyInventoryItemStatDefinition.md  DestinyDefinitionsDestinyItemCategoryDefinition.md  DestinyDefinitionsDestinyItemInventoryBlockDefinition.md  (+239 more)
(+502 files in other folders)
