[package]
name = "destiny2-api"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]

[dependencies]
serde = "*"
serde_derive = "*"
serde_yaml = "*"
serde_json = "*"
base64 = "*"
futures = "*"
hyper = "*"
url = "*"

[dev-dependencies]
tokio-core = "*"

[lib]
name = "destiny2_api"
path = "codegen/src/lib.rs"
